fixed closed auction details modal etc

--- a/SamsAuctions/appsettings.json
+++ b/SamsAuctions/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppConfiguration": {
+    "GroupCode": 7
+  },
   "ConnectionStrings": {
     "NackowskisIdentity": "Server=localhost;Database=NackowskisIdentity;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
