--- a/SamsAuctions/appsettingsBackup.json
+++ b/SamsAuctions/appsettingsBackup.json
@@ -3,7 +3,7 @@
     "GroupCode": 1040
   },
   "ConnectionStrings": {
-    "NackowskisIdentity": "Server=tcp:nackowskisserver.database.windows.net,1433;Initial Catalog=NackowskisDB;Persist Security Info=False;User ID=adminNackowskis;Password=samsauctions1!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "NackowskisIdentity": "Server=localhost;Database=NackowskisIdentity;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "DefaultRoles": {
     "Admin": "Admin",
